Update with network support